--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<li><a href="module-8/bounchareune_Mod8_2.html">Assignment 8.2</a></li>
 			<li><a href="module-9/bounchareune_Mod9_3.html">Assignment 9.3</a></li>
 			<li><a href="module-10/bounchareune_Mod10_3.html">Assignment 10.3</a><li>	
-			<li><a href="module-11/bounchareune_Mod11_2.html">Assignment 11.2</a><1i>
+			<li><a href="module-11/bounchareune_Mod11_2.html">Assignment 11.2</a><li>	
 			<li><a href="module-12/bounchareune_Mod12_2.html">Assignment 12.2</a><li>	
         </ul>
         <h3>Projects</h3>
